# marijanp.github.io

./: .gitignore  CNAME  README.md  about.markdown  default.nix  flake.nix  index.html  overlay.nix  package-lock.json  package.json  release.nix  shell.nix  site.hs  soupault.toml  tailwind.config.js  website.cabal
css/: style.css  syntax.css
docs/: about.html  archive.html  contact.html  feed.xml  index.html  robots.txt  sitemap.xml
docs/blog/: index.html
docs/css/: bootstrap.min.css  style.css  syntax.css
docs/js/: analytics.js  theme-state.js
docs/pages/: posts.html
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2022-06-03-dont-override-and-wrap-only.html  2022-08-26-nixos-how-to-modify-systemd-services-you-dont-own.html  2022-09-26-nixos-how-to-add-a-qemu-image--as-a-flake-output.html  2022-10-19-haskell-nix-how-to-reliably-add-runime-deps.html  2023-08-09-postgres-nixos-container.html  2023-10-31-nixos-oceansprint.html  feed.atom  index.html
examples/hasell-nix/wrap/example/: example.cabal
examples/hasell-nix/wrap/example/app/: Main.hs
examples/hasell-nix/wrap/example/test/: MyLibTest.hs
examples/postgres-container/: flake.nix
marijanp.github.io/: marijanp-github-io.cabal
nix/: sources.json
npins/: sources.json
plugins/: add-meta-description.lua  article-wrapper.lua  atom.lua  extract-canonical.lua  sitemap.lua
posts/: 2015-12-07-tu-quoque.markdown  2022-06-03-dont-override-and-wrap-only.markdown  2022-09-26-nixos-how-to-add-a-qemu-image--as-a-flake-output.markdown
secrets/: sourcehut-pages-access-token.gpg
site/: CNAME  index.html  robots.txt
site/blog/: 2022-08-26-nixos-how-to-modify-systemd-services-you-dont-own.md  2023-08-09-postgres-nixos-container.md
site/css/: style.css  style.in.css
site/js/: analytics.js  theme-state.js
src/: feed-configuration.json  index.html
templates/: base.html  default.html  feed.atom  post-list.html  post.html  sitemap.xml
website-builder/: website-builder.cabal
website-builder/app/: Main.hs
(+41 files in other folders)
