name:       website-builder
version:    0.1.0.0
build-type: Simple

executable website-builder
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base
    , hakyll
    , pandoc
    , with-utf8

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
